# UwU-reborn

./: README.md  parser.py  pyproject.toml  syntaxtIdea.txt  test.uwu  uwu.lark
compiler/: UwU-reborn.lark  ast_builder.py  nodes.py  parser.py  test.uwu  uwuc.py
